--- a/catalog/view/theme/thucpham/stylesheet/stylesheet.css
+++ b/catalog/view/theme/thucpham/stylesheet/stylesheet.css
@@ -66,10 +66,13 @@ label {
 }
 /* layout */
 #container {
-	width: 980px;
+	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: left;
+}
+#content-wrapper {
+	background-color: #FFF;
 }
 #column-left {
 	float: left;
@@ -81,7 +84,6 @@ label {
 }
 #content {
 	min-height: 400px;
-	margin-bottom: 25px;
 }
 #column-left + #column-right + #content, #column-left + #content {
 	margin-left: 195px;
@@ -91,8 +93,7 @@ label {
 }
 /* header */
 #header {
-	height: 90px;
-	margin-bottom: 7px;
+	height: 120px;
 	padding-bottom: 4px;
 	position: relative;
 	z-index: 99;
@@ -261,33 +262,29 @@ label {
 }
 #header #search {
 	position: absolute;
-	top: 15px;
-	right: 0px;
+	top: 94px;
+	right: 120px;
 	width: 298px;
 	z-index: 15;
 }
 #header .button-search {
 	position: absolute;
-	left: 0px;
-	background: url('../image/button-search.png') center center no-repeat;
-	width: 28px;
-	height: 24px;
+	left: 230px;
+	top: 0;
+	background: url('../image/search.png') center center no-repeat;
+	width: 55px;
+	height: 28px;
 	border-right: 1px solid #CCCCCC;
 	cursor: pointer;
 }
 #header #search input {
+	background: #EEE;
+	padding: 1px;
+	width: 230px;
+	height: 24px;
+}
+#header #search input:focus {
 	background: #FFF;
-	padding: 1px 1px 1px 33px;
-	width: 262px;
-	height: 21px;
-	border: 1px solid #CCCCCC;
-	-webkit-border-radius: 3px 3px 3px 3px;
-	-moz-border-radius: 3px 3px 3px 3px;
-	-khtml-border-radius: 3px 3px 3px 3px;
-	border-radius: 3px 3px 3px 3px;
-	-webkit-box-shadow: 0px 2px 0px #F0F0F0;
-	-moz-box-shadow: 0px 2px 0px #F0F0F0;
-	box-shadow: 0px 2px 0px #F0F0F0;
 }
 #header #welcome {
 	position: absolute;
@@ -297,6 +294,21 @@ label {
 	width: 298px;
 	text-align: right;
 	color: #999999;
+}
+#header .top {
+	float: right;
+	height: 20px;
+	background: #fff;
+	border-radius: 0 0 5px 5px;
+	margin-right: 120px;
+	padding: 4px 8px 3px 8px;
+}
+#header .top a{
+	text-decoration: none;
+	color: #000;
+}
+#header .top a:hover{
+	color: #FF7800;
 }
 #header .links {
 	position: absolute;
@@ -319,17 +331,9 @@ label {
 }
 /* menu */
 #menu {
-	background: #585858;
-	border-bottom: 1px solid #000000;
-	height: 37px;
+	background: #285c08;
+	height: 38px;
 	margin-bottom: 15px;
-	-webkit-border-radius: 5px 5px 5px 5px;
-	-moz-border-radius: 5px 5px 5px 5px;
-	-khtml-border-radius: 5px 5px 5px 5px;
-	border-radius: 5px 5px 5px 5px;
-	-webkit-box-shadow: 0px 2px 2px #DDDDDD;
-	-moz-box-shadow: 0px 2px 2px #DDDDDD;
-	box-shadow: 0px 2px 2px #DDDDDD;
 	padding: 0px 5px;
 }
 #menu ul {
@@ -342,11 +346,15 @@ label {
 	float: left;
 	z-index: 20;
 	padding: 6px 5px 5px 0px;
+	background: url('../image/bg_sep_menu.png') no-repeat scroll right 0px;
 }
 #menu > ul > li:hover {
 }
+#menu > ul > li.last {
+	background: none;
+}
 #menu > ul > li > a {
-	font-size: 13px;
+	font-size: 12px;
 	color: #FFF;
 	line-height: 14px;
 	text-decoration: none;
@@ -355,35 +363,44 @@ label {
 	margin-bottom: 5px;
 	z-index: 6;
 	position: relative;
+	text-transform: uppercase;
+	font-weight: bolder;
 }
+
 #menu > ul > li:hover > a {
-	background: #000000;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-khtml-border-radius: 5px;
-	border-radius: 5px;
+	color: #000;
 }
 #menu > ul > li > div {
 	display: none;
-	background: #FFFFFF;
 	position: absolute;
+	left: 0px;
 	z-index: 5;
-	padding: 5px;
-	border: 1px solid #000000;
-	-webkit-border-radius: 0px 0px 5px 5px;
-	-moz-border-radius: 0px 0px 5px 5px;
-	-khtml-border-radius: 0px 0px 5px 5px;
-	border-radius: 0px 0px 5px 5px;
-	background: url('../image/menu.png');
+	background: #285C08;
+	opacity: 0.9;
+	padding-left: 5px;
+	box-shadow: 1px 1px 0 0 rgba(255, 255, 255, 0.25) inset, 0 1px 24px rgba(0, 0, 0, 0.55);
+	padding-bottom: 0.5em;
+	border-color: #DDDDDD;
 }
 #menu > ul > li:hover > div {
 	display: table;
 }
 #menu > ul > li > div > ul {
 	display: table-cell;
+	
 }
 #menu > ul > li ul + ul {
 	padding-left: 20px;
+}
+#menu > ul  li  ul {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+#menu > ul  li  ul li{
+	padding: 5px 0px;
+}
+#menu > ul  li  ul  li + li {
+	border-top: 1px solid #FFF;
 }
 #menu > ul > li ul > li > a {
 	text-decoration: none;
@@ -394,7 +411,7 @@ label {
 	min-width: 120px;
 }
 #menu > ul > li ul > li > a:hover {
-	background: #000000;
+	color: #F78214;
 }
 #menu > ul > li > div > ul > li > a {
 	color: #FFFFFF;
@@ -1631,9 +1648,12 @@ ul.box-filter > li ul {
 	text-decoration: underline;
 }
 #powered {
-	margin-top: 5px;
 	text-align: right;
 	clear: both;
+	color: #FFF;
+	background-color: #000;
+	border-top: 1px solid #FFF;
+	padding: 10px 5px;
 }
 /* banner */
 .banner div {
