--- a/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
+++ b/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
@@ -27,6 +27,7 @@ h2 {
 	font-size: 16px;
 	margin-top: 0px;
 	margin-bottom: 5px;
+	margin-left: 5px;
 }
 p {
 	margin-top: 0px;
@@ -71,7 +72,7 @@ label {
 }
 #content-wrapper {
 	width: 1000px;
-	margin: 60px auto;
+	margin: 40px auto;
 }
 #column-left {
 	float: left;
@@ -321,10 +322,10 @@ label {
 }
 #header .top {
 	float: right;
-	height: 20px;
+	height: auto;
 	background: #fff;
 	border-radius: 0 0 5px 5px;
-	margin-right: 120px;
+	margin-right: 0;
 	padding: 4px 8px 3px 8px;
 }
 #header .top a{
@@ -335,23 +336,22 @@ label {
 	color: #FF7800;
 }
 #header .links {
-	position: absolute;
-	right: 0px;
-	bottom: 3px;
+	margin-top: 0px;
+	margin-right: 190px;
 	font-size: 10px;
 	padding-right: 10px;
+	width: 80px;
+	float: right;
 }
 #header .links a {
-	float: left;
-	display: block;
 	padding: 0px 0px 0px 7px;
-	color: #38B0E3;
+	color: #FFF;
 	text-decoration: none;
 	font-size: 12px;
+	float: left;
 }
 #header .links a + a {
-	margin-left: 8px;
-	border-left: 1px solid #CCC;
+
 }
 /* menu */
 #menu {
@@ -365,7 +365,6 @@ label {
 #menu div ul {
 	list-style: none;
 	padding: 0;
-	height: 70px;
 	top: 15px;
 	margin-left:30px;
 	width: 1000px;
@@ -592,6 +591,7 @@ table.radio tr.highlight:hover td {
 }
 .pagination .links {
 	float: left;
+	margin-left: 5px;
 }
 .pagination .links a {
 	display: inline-block;
@@ -599,6 +599,7 @@ table.radio tr.highlight:hover td {
 	padding: 4px 10px;
 	text-decoration: none;
 	color: #A3A3A3;
+	border-radius: 3px;
 }
 .pagination .links b {
 	display: inline-block;
@@ -608,10 +609,11 @@ table.radio tr.highlight:hover td {
 	text-decoration: none;
 	color: #269BC6;
 	background: #FFFFFF;
+	border-radius: 3px;
 }
 .pagination .results {
 	float: right;
-	padding-top: 3px;
+	padding: 3px 5px;
 }
 /* button */
 a.button, input.button {
@@ -734,7 +736,7 @@ a.button:hover, input.button:hover {
 	overflow: auto;
 }
 .box-product > div {
-	width: 130px;
+	width: 178px;
 	display: inline-block;
 	vertical-align: top;
 	margin-right: 20px;
@@ -749,7 +751,7 @@ a.button:hover, input.button:hover {
 }
 .box-product .image img {
 	padding: 3px;
-	border: 1px solid #E7E7E7;
+	border: none;
 }
 .box-product .name a {
 	color: #38B0E3;
@@ -834,7 +836,8 @@ ul.box-filter > li ul {
 	padding: 10px;
 	overflow: auto;
 	margin-bottom: 20px;
-	border: 1px solid #EEEEEE;
+	border-top: 1px solid #EEEEEE;
+	border-bottom: 1px solid #EEEEEE;
 }
 #content .content .left {
 	float: left;
@@ -863,6 +866,29 @@ ul.box-filter > li ul {
 	float: left;
 	width: 18%;
 }
+.toolbar {
+	border: 1px solid #ececec;
+	background: url(../image/tail-toolbar.gif) 0 bottom repeat-x #fff;
+	margin-bottom: 20px;
+	border-radius: 5px;
+	height: 80px;
+}
+.toolbar .pager {
+	margin-top: 0px;
+}
+.toolbar .pager select{
+	width: 60px;
+	margin: 5px;
+	height: 28px;
+}
+.toolbar .sorter {
+	margin-top: -13px;
+}
+.toolbar .sorter select{
+	width: 134px;
+	margin: 0 5px;
+	height: 28px;
+}
 /* manufacturer */
 .manufacturer-list {
 	border: 1px solid #DBDEE1;
@@ -890,12 +916,11 @@ ul.box-filter > li ul {
 }
 /* product */
 .product-filter {
-	border-bottom: 1px solid #EEEEEE;
 	padding-bottom: 5px;
 	overflow: auto;
 }
 .product-filter .display {
-	margin-right: 15px;
+	margin-left: 5px;
 	float: left;
 	padding-top: 4px;
 	color: #333;
@@ -924,6 +949,7 @@ ul.box-filter > li ul {
 .product-list > div {
 	overflow: auto;
 	margin-bottom: 15px;
+	overflow-y: hidden;
 }
 .product-list .right {
 	float: right;
@@ -939,7 +965,7 @@ ul.box-filter > li ul {
 }
 .product-list .image img {
 	padding: 3px;
-	border: 1px solid #E7E7E7;
+
 }
 .product-list .name {
 	margin-bottom: 3px;
@@ -982,26 +1008,34 @@ ul.box-filter > li ul {
 }
 .product-list .wishlist, .product-list .compare {
 	margin-bottom: 3px;
+	float: left;
+	margin-right: 5px;
+	margin-top: 5px;
+	
+}
+.product-list .compare {
+	float: right;
+	margin-right: 0;
 }
 .product-list .wishlist a {
 	color: #333333;
 	text-decoration: none;
-	padding-left: 18px;
 	display: block;
 	width: 30px;
 	height: 30px;
 	float: left;
 	background: url('../image/link-wishlist.gif') left center no-repeat;
+	border: 1px solid #EEE;
 }
 .product-list .compare a {
 	color: #333333;
 	text-decoration: none;
-	padding-left: 18px;
 	display: block;
 	width: 30px;
 	height: 30px;
 	float: left;
 	background: url('../image/link-compare.gif') left center no-repeat;
+	border: 1px solid #EEE;
 }
 .product-grid {
 	width: 100%;
@@ -1106,6 +1140,37 @@ ul.box-filter > li ul {
 	float: left;
 	background: url('../image/link-compare.gif') left center no-repeat;
 	margin: 5px;
+}
+
+a.list-button {
+	display: block;
+	float: left;
+	width: 25px;
+	height: 24px;
+	background: url(../image/grid-list.png) no-repeat right -24px;		
+}
+a.grid-button {
+	display: block;
+	float: left;
+	width: 25px;
+	height: 24px;
+	background: url(../image/grid-list.png) no-repeat left -24px;
+	margin-left: 5px;
+}
+span.list-button, a.list-button:hover {
+	display: block;
+	float: left;
+	width: 25px;
+	height: 24px;
+	background: url(../image/grid-list.png) no-repeat right top;	
+}
+span.grid-button, a.grid-button:hover {
+	display: block;
+	float: left;
+	width: 25px;
+	height: 24px;
+	background: url(../image/grid-list.png) no-repeat left top;
+	margin-left: 5px;		
 }
 /* Product */
 .product-info {
@@ -1853,4 +1918,9 @@ ul.hotline li.b {
 	float: left;
 	margin-left: 10px;
 	width: 640px;
+}
+/*Notification*/
+#notification {
+	margin: 40px auto;
+	width: 1000px;
 }
