--- a/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
+++ b/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
@@ -111,7 +111,7 @@ label {
 }
 .header-inner {
 	width: 1000px;
-	height: 148px;
+	height: 130px;
 	margin: 0 auto;
 	background: url('../image/banner5.png');
 }
@@ -413,6 +413,7 @@ label {
 	box-shadow: 1px 1px 0 0 rgba(255, 255, 255, 0.25) inset, 0 1px 24px rgba(0, 0, 0, 0.55);
 	padding-bottom: 0.5em;
 	border-color: #DDDDDD;
+	margin-top: -5px;
 }
 #menu > div > ul > li:hover > div {
 	display: table;
