set banner border radius

--- a/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
+++ b/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
@@ -1953,3 +1953,9 @@ ul.hotline li.b {
 	border: 1px solid #EDEDED;
 	border-radius: 3px;
 }
+/*slideshow*/
+.slideshow {
+	border-radius: 5px;
+	overflow: hidden;
+	height: 388px;
+}
