--- a/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
+++ b/catalog/view/theme/thucpham3/stylesheet/stylesheet.css
@@ -4,7 +4,7 @@ html {
 	padding: 0;
 }
 body {
-	background-color: #FFF;
+	background-color: #FCF9F9;
 	color: #000000;
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0px;
@@ -73,6 +73,7 @@ label {
 #content-wrapper {
 	width: 1000px;
 	margin: 40px auto;
+	background-color: #;
 }
 #column-left {
 	float: left;
@@ -89,6 +90,7 @@ label {
 	min-height: 400px;
 	border: 1px solid #EDEDED;
 	border-radius: 5px;
+	background: #FFF;
 }
 #column-left + #column-right + #content, #column-left + #content {
 	margin-left: 225px;
@@ -717,7 +719,7 @@ a.button:hover, input.button:hover {
 	font-weight: bold;
 	line-height: 14px;
 	color: #52A919;
-	background: none;
+	background: #FFF;
 	border-bottom: none;
 }
 .box .box-content {
@@ -1818,6 +1820,12 @@ span.grid-button, a.grid-button:hover {
 	border-radius: 5px;
 	margin-bottom: 20px;
 	margin-top: 0px !important;
+	-webkit-border-radius: 7px 
+	-moz-border-radius: 7px;
+	-khtml-border-radius: 7px;
+	border-radius: 7px;
+	border: 1px solid #DBDEE1;
+	background-color: #FFF;
 }
 .banner div {
 	text-align: center;
