--- a/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -659,6 +659,7 @@ a.button:hover, input.button:hover {
 	font-weight: bold;
 	line-height: 14px;
 	color: #333;
+	background-color: #58b41c;
 }
 .box .box-content {
 	background: #FFFFFF;
@@ -1639,5 +1640,5 @@ ul.box-filter > li ul {
 	display: none;
 }
 .banner div img {
-	margin-bottom: 20px;
+	margin-bottom: 4px;
 }
