--- a/catalog/view/theme/thucphamnew/stylesheet/stylesheet.css
+++ b/catalog/view/theme/thucphamnew/stylesheet/stylesheet.css
@@ -685,6 +685,7 @@ a.button:hover, input.button:hover {
 	font-weight: bold;
 	line-height: 14px;
 	color: #333;
+	background-color: #58b41c;
 }
 .box .box-content {
 	background: #FFFFFF;
